Terminando o basico do formulario e a tabela que estao cadastrado os produtos, html e css

--- a/index.html
+++ b/index.html
@@ -24,12 +24,52 @@
 
     <section class="pdt-main">
         <div class="pdt-logo-marca">
-            <h1>Mostra Produtos Aqui</h1>
+            <h1>TABELA</h1>
         </div>
 
-        <tbody>
+        <table>
+            <!-- Este é o cabeçario da tabela -->
+            <thead>
+                <tr>
+                    <th>PRODUTOS</th>
+                    <th>VALOR</th>
+                </tr>
+            </thead>
 
-        </tbody>
+            <!-- Corpo da tabela -->
+            <Tbody>
+
+                <tr>
+                    <td>Computador</td>
+                    <td>3598.96</td>
+                    <td>
+                        <button class="btn-editar">Editar</button>
+                        <button class="btn-delete">Excluir</button>
+                    </td>
+
+                </tr>
+
+                <tr>
+                    <td>Notebook</td>
+                    <td>2599.99</td>
+                    <td>
+                        <button class="btn-editar">Editar</button>
+                        <button class="btn-delete">Excluir</button>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>Celular</td>
+                    <td>1585.95</td>
+                    <td>
+                        <button class="btn-editar">Editar</button>
+                        <button class="btn-delete">Excluir</button>
+                    </td>
+                </tr>
+
+            </Tbody>
+
+        </table>
 
     </section>
 
