Criando a pasta do javscript, pegando os campos do formulario e tranformando em json

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
 <body>
     <section>
-        <form action="" class="form-conteiner">
-            <label for="produto" class="form-label">Produto: </label>
-            <input type="text" name="produto" id="" placeholder="Nome do Produto..." class="form-input">
+        <form action="" class="form-conteiner" id="formularioId">
+            <label for="nomeProduto" class="form-label">Produto: </label>
+            <input type="text" name="nomeProduto" id="inputProduto" placeholder="Nome do Produto..." class="form-input"
+                value="Notebook">
 
-            <label for="valor" class="form-label">Valor: </label>
-            <input type="text" name="valor" id="" placeholder="Valor..." class="form-input">
+            <label for="valorDoProduto" class="form-label">Valor: </label>
+            <input type="text" name="valorDoProduto" id="inputValor" placeholder="Valor..." class="form-input"
+                value="12564">
 
             <button type="submit" class="btn-submit"> Cadastra </button>
 
@@ -72,6 +74,8 @@
         </table>
 
     </section>
+
+    <script src="index.js"></script>
 
 </body>
 
