--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>TABELA</h1>
         </div>
 
-        <table id="table-users">
+        <table>
             <!-- Este é o cabeçario da tabela -->
             <thead>
                 <tr>
