Adicionando o nome antes do formulario e emcima da tabela e trocando o nome tabele para produtos com valores e a cor da tabela

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <section>
+        <div class="adc-principal">
+            <h1>Adicionar o Produto e o Valor no Formulario abaixo</h1>
+        </div>
+
         <form action="" class="form-conteiner" id="formularioId">
             <label for="nomeProduto" class="form-label">Produto: </label>
             <input type="text" name="nomeProduto" id="inputProduto" placeholder="Nome do Produto..." class="form-input">
@@ -22,9 +26,13 @@
         </form>
     </section>
 
+    <div class="adc-principal">
+        <h2>Lista de Produtos Cadastrados</h2>
+    </div>
+
     <section class="pdt-main">
         <div class="pdt-logo-marca">
-            <h1>TABELA</h1>
+            <h1>PRODUTOS COM VALORES</h1>
         </div>
 
         <table>
