Validando o Formulario adicionei required no formulario e fiz a validação com javascript

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
         <form action="" class="form-conteiner" id="formularioId">
             <label for="nomeProduto" class="form-label">Produto: </label>
-            <input type="text" name="nomeProduto" id="inputProduto" placeholder="Nome do Produto..." class="form-input">
+            <input type="text" name="nomeProduto" id="inputProduto" placeholder="Nome do Produto..." class="form-input"
+                required>
 
             <label for="valorDoProduto" class="form-label">Valor: </label>
-            <input type="text" name="valorDoProduto" id="inputValor" placeholder="Valor..." class="form-input">
+            <input type="text" name="valorDoProduto" id="inputValor" placeholder="Valor..." class="form-input" required>
 
             <button type="submit" class="btn-submit"> Cadastra </button>
 
