Criando a View do Editar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,28 @@
         </form>
     </section>
 
+    <section style="display: none;">
+        <div class="adc-principal">
+            <h1>Editar o Produto e o Valor </h1>
+        </div>
+
+        <form action="" class="form-conteiner-editar" id="formularioIdUpdate">
+            <label for="nomeProduto" class="form-label">Produto: </label>
+            <input type="text" name="nomeProduto" id="inputProduto" placeholder="Nome do Produto..." class="form-input"
+                required>
+
+            <label for="valorDoProduto" class="form-label">Valor: </label>
+            <input type="text" name="valorDoProduto" id="inputValor" placeholder="Valor..." class="form-input" required>
+
+            <div class="btn-editar">
+                <button type="submit" class="" style="background: rgb(129, 129, 226);"> Salvar </button>
+                <button type="button" class=""> Cancelar </button>
+            </div>
+
+        </form>
+    </section>
+
+
     <div class="adc-principal">
         <h2>Lista de Produtos Cadastrados</h2>
     </div>
