adicionando o evento do butão editar vai aparece o formulario do editar produto que ira tambem aparece o butão salva e cancelar e foi adicionado o evento do cancelar que ira volta para o formulario inicial

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section>
+    <section id="box-user-create">
         <div class="adc-principal">
             <h1>Adicionar o Produto e o Valor no Formulario abaixo</h1>
         </div>
@@ -27,7 +27,7 @@
         </form>
     </section>
 
-    <section style="display: none;">
+    <section id="box-user-update" style="display: none;">
         <div class="adc-principal">
             <h1>Editar o Produto e o Valor </h1>
         </div>
@@ -42,7 +42,7 @@
 
             <div class="btn-editar">
                 <button type="submit" class="" style="background: rgb(129, 129, 226);"> Salvar </button>
-                <button type="button" class=""> Cancelar </button>
+                <button type="button" class="btn-cancel"> Cancelar </button>
             </div>
 
         </form>
