Adicionando o sessionStorage, para quando atualiza a pagina os dados ficarem na tela...

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="box-user-create">
         <div class="adc-principal">
-            <h1>Adicionar o Produto e o Valor no Formulario abaixo</h1>
+            <h1>Adicionar o Produto e Valor no Formulario abaixo</h1>
         </div>
 
         <form action="" class="form-conteiner" id="formularioId">
@@ -29,7 +29,7 @@
 
     <section id="box-user-update" style="display: none;">
         <div class="adc-principal">
-            <h1>Editar o Produto e o Valor </h1>
+            <h1>Editar Produto e Valor </h1>
         </div>
 
         <form action="" class="form-conteiner-editar" id="formularioIdUpdate">
@@ -50,7 +50,7 @@
 
 
     <div class="adc-principal">
-        <h2>Lista de Produtos Cadastrados</h2>
+        <h2>Lista de Produtos </h2>
     </div>
 
     <section class="pdt-main">
